--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     position: relative;
     height: fit-content;
     width:100%;
-    background:url("Image/bbackground.png") no-repeat center / cover ;
+    background:url("bbground.png") no-repeat center / cover ;
     height: 100vh;
     overflow: hidden;
     display: flex;
